--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -15,43 +15,78 @@
     limitations under the License.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.onap.usecase-ui.server</groupId>
         <artifactId>usecase-ui-server-parent</artifactId>
         <version>2.0.1-SNAPSHOT</version>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>standalone</artifactId>
+    <artifactId>usecase-ui-server-standalone</artifactId>
     <packaging>pom</packaging>
     <name>usecase-ui-server-standalone</name>
+    <description>distribute binary files and docker image for usecase-ui server</description>
 
     <properties>
-        <packagename>usecase-ui-server</packagename>
-        <linux64id>linux64</linux64id>
-        <win64id>win64</win64id>
-        <linux64outputdir>target/assembly/${linux64}/</linux64outputdir>
-        <win64outputdir>target/assembly/${win64id}/</win64outputdir>
-        <version.output>target/version/</version.output>
         <usecaseui.version>2.0.1</usecaseui.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.build.timestamp.format>yyyyMMdd'T'HHmmss'Z'</maven.build.timestamp.format>
+        <linux64outputdir>target/assembly/linux64</linux64outputdir>
+        <dockeroutput>target/version/${usecaseui.version}</dockeroutput>
     </properties>
 
     <build>
         <finalName>usecse-ui-server</finalName>
         <plugins>
             <plugin>
-              <groupId>org.apache.maven.plugins</groupId> 
-              <artifactId>maven-resources-plugin</artifactId>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>1.3.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.6</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.wagon</groupId>
+                        <artifactId>wagon-webdav-jackrabbit</artifactId>
+                        <version>2.10</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId> 
+                <artifactId>maven-resources-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>copy-resources-${linux64id}</id>
+                        <id>copy-resources-linux64</id>
                         <phase>process-resources</phase>
                         <goals>
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${basedir}/${linux64outputdir}</outputDirectory>
+                            <outputDirectory>${linux64outputdir}</outputDirectory>
                             <resources>
                                 <resource>
                                     <directory>src/main/assembly/</directory>
@@ -60,31 +95,6 @@
                                         <include>**/*</include>
                                     </includes>
                                     <excludes>
-                                        <exclude>**/*.bat</exclude>
-                                        <exclude>Dockerfile</exclude>
-                                    </excludes>
-                                </resource>
-                            </resources>
-                            <overwrite>true</overwrite>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>copy-resources-${win64id}</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${basedir}/${win64outputdir}</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>src/main/assembly/</directory>
-                                    <filtering>false</filtering>
-                                    <includes>
-                                        <include>**/*</include>
-                                    </includes>
-                                    <excludes>
-                                        <exclude>**/*.sh</exclude>
                                         <exclude>Dockerfile</exclude>
                                     </excludes>
                                 </resource>
@@ -99,7 +109,7 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${version.output}</outputDirectory>
+                            <outputDirectory>${dockeroutput}</outputDirectory>
                             <resources>
                                 <resource>
                                     <directory>src/main/assembly/</directory>
@@ -120,7 +130,7 @@
                 <version>2.8</version>
                 <executions>
                     <execution>
-                        <id>copy-jar-${linux64id}</id>
+                        <id>copy-jar-linux64</id>
                         <goals>
                             <goal>copy</goal>
                         </goals>
@@ -133,25 +143,6 @@
                                     <type>jar</type>
                                     <overWrite>true</overWrite>
                                     <outputDirectory>${linux64outputdir}</outputDirectory>
-                                    <destFileName>usecase-ui-server.jar</destFileName>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>copy-jar-${win64id}</id>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <phase>prepare-package</phase>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>org.onap.usecase-ui.server</groupId>
-                                    <artifactId>usecase-ui-server</artifactId>
-                                    <type>jar</type>
-                                    <overWrite>true</overWrite>
-                                    <outputDirectory>${win64outputdir}</outputDirectory>
                                     <destFileName>usecase-ui-server.jar</destFileName>
                                 </artifactItem>
                             </artifactItems>
@@ -172,7 +163,7 @@
                         </goals>
                         <configuration>
                             <tasks name="${project.artifactId}">
-                                <tar destfile="${version.output}/${packagename}-${project.version}-linux64.tar.gz" longfile="posix" compression="gzip">
+                                <tar destfile="${dockeroutput}/usecase-ui-server-${project.version}-linux64.tar.gz" longfile="posix" compression="gzip">
                                     <tarfileset dir="${linux64outputdir}" filemode="0644" dirmode="0755">
                                         <exclude name="**/*.sh"/>
                                     </tarfileset>
@@ -180,11 +171,7 @@
                                         <include name="**/*.sh"/>
                                     </tarfileset>
                                 </tar>
-                                <!--attachartifact file="${version.output}/${packagename}-${project.version}-linux64.tar.gz" classifier="linux64" type="tar.gz"/-->
-                                <zip destfile="${version.output}/${packagename}-${project.version}-win64.zip" update="true">
-                                    <zipfileset dir="${win64outputdir}" includes="**"/>
-                                </zip>
-                                <!--attachartifact file="${version.output}/${packagename}-${project.version}-win64.zip" classifier="win64" type="zip"/-->
+                                <!--attachartifact file="${version.output}/usecase-ui-server-${project.version}-linux64.tar.gz" classifier="linux64" type="tar.gz"/-->
                             </tasks>
                         </configuration>
                     </execution>
@@ -203,23 +190,8 @@
                         <configuration>
                             <artifacts>
                                 <artifact>
-                                    <file>${version.output}/${packagename}-${project.version}-linux64.tar.gz</file>
+                                    <file>${dockeroutput}/usecase-ui-server-${project.version}-linux64.tar.gz</file>
                                     <type>tar.gz</type>
-                                </artifact>
-                            </artifacts>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>attach-artifacts-win64</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>attach-artifact</goal>
-                        </goals>
-                        <configuration>
-                            <artifacts>
-                                <artifact>
-                                    <file>${version.output}/${packagename}-${project.version}-win64.zip</file>
-                                    <type>zip</type>
                                 </artifact>
                             </artifacts>
                         </configuration>
@@ -245,8 +217,8 @@
                                     <name>onap/usecase-ui-server</name>
                                     <build>
                                         <cleanup>try</cleanup>
-                                        <dockerFileDir>${basedir}/${version.output}</dockerFileDir>
-                                        <dockerFile>${basedir}/${version.output}/Dockerfile</dockerFile>
+                                        <dockerFileDir>${dockeroutput}</dockerFileDir>
+                                        <dockerFile>${dockeroutput}/Dockerfile</dockerFile>
                                         <tags>
                                             <tag>${usecaseui.version}-SNAPSHOT-latest</tag>
                                             <tag>${usecaseui.version}-STAGING-latest</tag>
