--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <siteNexusPath>content/sites/site/${project.groupId}/${project.artifactId}/${project.version}/</siteNexusPath>
     </properties>
 
-    <distributionManagement>
+    <!--distributionManagement>
         <repository>
             <id>onap-releases</id>
             <url>${nexusproxy}/${releaseNexusPath}</url>
@@ -56,11 +56,11 @@
             <id>onap-site</id>
             <url>dav:${nexusproxy}${siteNexusPath}</url>
         </site>
-    </distributionManagement>
+    </distributionManagement-->
 
     <!-- Specify the repositories here to avoid coordination of ~/.m2/settings.xml 
         files among developers. Use values (not properties) so oparent can be resolved. -->
-    <repositories>
+    <!--repositories>
         <repository>
             <id>onap-public</id>
             <url>${nexusproxy}/${publicNexusPath}</url>
@@ -82,11 +82,11 @@
                 <enabled>false</enabled>
             </releases>
         </repository>
-    </repositories>
+    </repositories-->
 
     <!-- Specify the repositories here to avoid coordination of ~/.m2/settings.xml 
         files among all developers. -->
-    <pluginRepositories>
+    <!--pluginRepositories>
         <pluginRepository>
             <id>onap-plugin-public</id>
             <url>${nexusproxy}/${publicNexusPath}</url>
@@ -108,14 +108,14 @@
                 <enabled>false</enabled>
             </releases>
         </pluginRepository>
-    </pluginRepositories>
+    </pluginRepositories-->
 
     <modules>
         <module>server</module>
-        <module>standalone</module>
+        <!--module>standalone</module-->
     </modules>
 
-    <build>
+    <!--build>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -154,5 +154,5 @@
                 <version>2.8</version>
             </plugin>
         </plugins>
-    </build>
+    </build-->
 </project>
